# coe322fall2025

./: README.md  welcome-2025.md
sessions/: Makefile  cbuild.sh
sessions/aug28/: even.cpp  session.txt
sessions/nov04/: CMakeLists.txt  notes.txt  safesqrt.cpp
sessions/nov06/: CMakeLists.txt  linklib.cpp  linklib.hpp  linktests.cpp
sessions/nov11/: quadlib.hpp  quadtest.cpp  queenlib.hpp  queentest.cpp
sessions/nov18/: notes.txt  overflow.cpp  returncode.cpp
sessions/oct02/: notes.txt  tab.cpp
sessions/oct07/: CMakeLists.txt  notes.txt  rectangle.cpp  vector.cpp
sessions/oct09/: named_vector.cpp  named_vector.h  notes.txt  swap.cpp  vector.cpp
sessions/oct14/: CMakeLists.txt  func.cpp  func.hpp  hello.cpp  notes.txt
sessions/oct16/: CMakeLists.txt  options.cpp
sessions/oct28/: notes.txt  rectangle.cpp
sessions/oct30/: has.cpp
sessions/sep02/: collatz.cpp  loopfloat.cxx  notes.txt
sessions/sep04/: notes.txt  primefun.cpp
sessions/sep09/: newton.cpp  notes.txt
sessions/sep11/: newton.cpp  newton2.cpp  notes.txt
sessions/sep16/: fmt256.cpp  notes.txt  run_ff.sh
sessions/sep23/: notes.txt  pointclass.cpp
sessions/sep25/: CMakeLists.txt  pointclass.cpp  pointclass.cpp~
sessions/sep30/: notes.txt  pointclass.cpp  stream.cpp
